Fix/duck egg (#66)
* story section image flip fix

* ghost floats out of screen if points reach 15

* add last headshots

* fix multiple points on header click

* dont click working over socket and upping points correctly

* change dont section back to hover

* fix url

* fix gim image rotate animation

* fix url

* duck working on client and socket

* duck css fix

--- a/src/components/header-footer/Header.css
+++ b/src/components/header-footer/Header.css
@@ -89,3 +89,22 @@
     box-shadow: 0 0 0 8px rgba(0, 0, 0, 0);
   }
 }
+
+.hidden {
+  display: none;
+}
+
+@keyframes showDuck {
+  0% {opacity: 0;}
+  50% {opacity: 0.6;}
+  100% {opacity: 0;}
+}
+
+.daniDuck {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 10px;
+  margin-right: 10px;
+  animation: showDuck 3s ease-in-out both;
+}
